# MARS

./: CMakeLists.txt  CSVParser.cpp  CSVParser.h  DataLoader.cpp  DataLoader.h  IRaport.h  MoneyTransfer.cpp  MoneyTransfer.h  NewTransactionSum.cpp  NewTransactionSum.h  RaportManager.cpp  RaportManager.h  SumByAccountReport.cpp  SumByAccountReport.h  log.csv  main.cpp
src/: CMakeLists.txt  CSVParser.cpp  CSVParser.h  DataLoader.cpp  DataLoader.h  Dispatcher.cpp  Dispatcher.h  IPresentReport.h  IRaport.h  MoneyTransfer.cpp  MoneyTransfer.h  NewTransactionSum.cpp  NewTransactionSum.h  PresentResultToCmd.h  RaportManager.cpp  RaportManager.h  SumByAccountReport.cpp  SumByAccountReport.h
tests/: CMakeLists.txt
tests/UT/: CMakeLists.txt  NewTransactionSum_Test.cpp  SumByAccountReport_Test.cpp  basic_check.cpp
